Improve error messages for field introspection failures
- Enhanced warning message when field introspection fails
- Clarifies that field access failures prevent discovery of nested types
- Provides actionable guidance about --add-opens flags

Co-authored-by: iocanel <402008+iocanel@users.noreply.github.com>